--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,17 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
-<phpunit colors="true"
-         bootstrap="./vendor/autoload.php">
-
+<?xml version="1.0" encoding="UTF-8"?>
+<phpunit backupGlobals="false"
+         backupStaticAttributes="false"
+         bootstrap="vendor/autoload.php"
+         colors="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         processIsolation="false"
+         stopOnFailure="false">
     <testsuites>
-        <testsuite name="Test suite">
-            <directory>./tests/</directory>
+        <testsuite name="Application Test Suite">
+            <directory suffix="Test.php">./tests</directory>
         </testsuite>
     </testsuites>
-
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">src</directory>
+            <directory suffix=".php">./app</directory>
         </whitelist>
     </filter>
-
 </phpunit>
