--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "require": {
         "php": "^7.0",
-        "sabre/xml": "^1.5"
+        "sabre/xml": "^1.5",
+        "verdant/xml2array": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.4"
