--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         }
     },
     "require": {
-        "php": "^7.0",
+        "php": ">=7.4",
         "sabre/xml": "^1.5",
         "verdant/xml2array": "dev-master",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.4"
